# zk-voting

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  cn_edu_zjucst_jni_ZKVotingJNI.h  identity_fake_gadget.hpp  identity_fake_test.cpp  jni_from_java.hpp  jni_utils.h  library.cpp  sha256_gadget.hpp  sha256_gadget_test.cpp  test.cpp  util.hpp
src/jni/: ZKVotingJNI.java  makefile
src/jni/cn/edu/zjucst/jni/: ZKVotingJNI.java
src/jni_library/: jni_library.cpp  jni_to_java.hpp
